--- a/index.html
+++ b/index.html
@@ -1,49 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <!-- <link href="font.ttf" rel="stylesheet" type="text/css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-    </script>
-</head>
-<!-- <header>
-    <div id="HeaderText">
-        Emigracni analytika ceske republiky
-    </div>
-</header> -->
-
+    <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
 <body>
-    <main>
-        
-        <!-- <div id="PrahaPic"> -->
-        <div class="content">
-            Emigracni analytika ceske republiky            
+    <div id="HeaderText">
+        Emigrační analýtika české republiky
+    </div>
+    <div id="Board">
+        <div class="text">
+            Emigrace z rozvojových zemí představuje přirozený krok lidí hledajících lepší životní podmínky a nové příležitosti. 
+            Česká republika se v tomto ohledu vyniká, nabízí pohodlné podmínky pro přesídlení ze zemí bývalého Sovětského svazu, Vietnamu, Slovenska a dalších.
+            Například podobnost českého jazyka s ruštinou usnadňuje adaptaci pro mluvčí ruštiny. 
+            Kromě toho je proces přesunu do České republiky méně byrokratický ve srovnání s okolními zeměmi, což jej činí atraktivnějším a dostupnějším.
         </div>
-        <!-- <canvas id="myChart" style="width :100%;max-width:700px"></canvas> -->
+        <!-- <div class="graph">
+            <img class="graphPic" src="Graf1.png">
+        </div> -->
+        <div class="graph" id="chartContainer1"></div>
+        <div class="text">
+            Vyhody stěhování do ČR:
+            <ul>
+                <li>
+                    Vysoký index globální konkurenceschopnosti
+                </li>
+                <li>
+                    Vysoká úroveň bezpečnosti
+                </li>
+                <li>
+                    Ekologie. Plocha zelených ploch v hlavním městě České republiky činí 57%
+                </li>
+                <li>
+                    Vysoká úroveň zdravotnictví
+                </li>
+                <li>
+                    Bezplatné vysokoškolské vzdělání
+                </li>
+                <li>
+                    Nízké náklady. Díky tomu, že Česká republika nepřešla na euro a stále si udržuje svou měnu korunu, jsou ceny zde nižší než v sousedních zemích při vysoké životní úrovni.
+                </li>
+            </ul>
         </div>
-        <div id="BackSpine"></div>
-        <!-- <div id="backgrd"></div> -->
-    </main>
+        <!-- <div class="graph">
+            <img class="graphPic" src="Graf2.png">
+        </div> -->
+        <div class="graph" id="chartContainer2"></div>
+        <div class="text">
+        </div>
+        <!-- <div class="graph">
+            <img class="graphPic" src="Graf3.png">
+        </div> -->
+        <div class="graph" id="chartContainer3"></div>
+        <div class="text">
+        </div>
+
+    </div>
 </body>
-
 </html>
-<script>
-const xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
-const yValues = [55, 49, 44, 24, 15];
-const barColors = ["red", "green","blue","orange","brown"];
 
-new Chart("myChart", {
-  type: "bar",
-  data: {
-    labels: xValues,
-    datasets: [{
-      backgroundColor: barColors,
-      data: yValues
-    }]
-  },
-});
+<style>
+    .text{
+        font-size: 20px;
+        font-family: myFont;
+        text-align: justify;
+        text-justify: inter-word;
+        margin:1em;
+    }
+    #chartContainer{
+        width: 100%; 
+        height: 300px;
+        margin-top: 5%;
+        transition: 1s;
+    }
+    .graph{
+        height:30em;
+        margin-top: 5%;
+    }
+    .graphPic{
+        width: 100%;
+        height: 100%;
+    }
+
+    body{
+        margin: 0;
+        background: rgb(90 77 109);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    #Board{
+        background-color: #f0e4e4;
+        width:60%;
+        border-radius:20px;
+        padding: 2%;
+        margin:auto;
+        margin-top: 5%;
+        font-family: myFont;
+        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+        margin-bottom:5%;
+    }
+    #HeaderText{
+        font-size: 35px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 2%;
+        color:white;
+        font-family: myFontBold;
+    }
+
+    @font-face {
+    font-family: myFontBold;
+    src: url('texgyreadventor-bold.otf') format('opentype');
+    }
+    @font-face {
+    font-family: myFont;
+    src: url('texgyreadventor-regular.otf') format('opentype');
+    }
+    @font-face {
+    font-family: myFontItalic;
+    src: url('texgyreadventor-italic.otf') format('opentype');
+    }
+
+</style>
+<script>
+    window.onload = function () {
+	var chart1 = new CanvasJS.Chart("chartContainer1", {
+        backgroundColor: "transparent",
+        title:{
+                text:"Emigrace v roce 2023",
+        },
+		data: [              
+		{
+			// Change type to "doughnut", "line", "splineArea", etc.
+			type: "doughnut",
+            indexLabelFontFamily: "myFontBold",
+            indexLabelFontSize: 20,
+            indexLabel: "{label} {y}",
+            startAngle:  -90,
+			dataPoints: [
+				{ label: "Ukrajina",  y: 99069, color: " #cac285" },
+				{ label: "Slovensko", y: 66107, color: "#e25858" },
+				{ label: "Vietnam", y: 55677, color: "#87c288"  },
+				{ label: "Rusko",  y: 24207, color: "#248c66"  },
+				{ label: "Polsko",  y: 11418, color: "#a98cde"  },
+				{ label: "Bulharsko",  y: 7615, color: "#6497cf"  },
+				{ label: "Rumunsko",  y: 7186  },
+				{ label: "Mongolsko",  y: 6353  },
+				{ label: "Ostatni",  y: 72363, color: "#eb9694" }
+			]
+		}
+		]
+	});
+
+    var chart2 = new CanvasJS.Chart("chartContainer2", {
+        backgroundColor: "transparent",
+        title:{
+                text:"Emigrace v roce 2022",
+        },
+		data: [              
+		{
+			// Change type to "doughnut", "line", "splineArea", etc.
+			type: "doughnut",
+            indexLabelFontFamily: "myFontBold",
+            indexLabelFontSize: 20,
+            indexLabel: "{label} {y}",
+            startAngle:  -90,
+			dataPoints: [
+				{ label: "Ukrajina",  y: 93545, color: " #cac285"  },
+				{ label: "Slovensko", y: 62344, color: "#e25858"  },
+				{ label: "Vietnam", y: 55105, color: "#87c288"  },
+				{ label: "Rusko",  y: 23783, color: "#248c66"  },
+				{ label: "Polsko",  y: 11285, color: "#a98cde"  },
+				{ label: "Bulharsko",  y: 7192, color: "#6497cf"  },
+				{ label: "Rumunsko",  y: 6335  },
+				{ label: "Mongolsko",  y: 5894  },
+				{ label: "Ostatni",  y: 68671, color: "#eb9694"  }
+			]
+		}
+		]
+	});
+
+    var chart3 = new CanvasJS.Chart("chartContainer3", {
+        backgroundColor: "transparent",
+        title:{
+                text:"Emigrace v roce 2021",
+        },
+		data: [              
+		{
+			// Change type to "doughnut", "line", "splineArea", etc.
+			type: "doughnut",
+            indexLabelFontFamily: "myFontBold",
+            indexLabelFontSize: 20,
+            indexLabel: "{label} {y}",
+            startAngle:  -90,
+			dataPoints: [
+				{ label: "Ukrajina",  y: 90776, color: " #cac285"  },
+				{ label: "Slovensko", y: 58843, color: "#e25858"  },
+				{ label: "Vietnam", y: 54390, color: "#87c288"  },
+				{ label: "Rusko",  y: 23376, color: "#248c66"  },
+				{ label: "Polsko",  y: 11129, color: "#a98cde"  },
+				{ label: "Bulharsko",  y: 6687, color: "#6497cf"  },
+				{ label: "Rumunsko",  y: 5545  },
+				{ label: "Mongolsko",  y: 5603  },
+				{ label: "Ostatni",  y: 65543, color: "#eb9694"  }
+			]
+		}
+		]
+	});
+    chart1.render();
+    chart2.render();
+	chart3.render();
+}
 </script>
