--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+    <head>
+        <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+        <title>
+            Emigrace české republiky
+        </title>
+    </head>
 <body>
     <div id="HeaderText">
         Emigrační analýtika české republiky
@@ -104,6 +109,7 @@
         margin-top: 2%;
         color:white;
         font-family: myFontBold;
+        text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
     }
 
     @font-face {
@@ -136,14 +142,14 @@
             indexLabel: "{label} {y}",
             startAngle:  -90,
 			dataPoints: [
-				{ label: "Ukrajina",  y: 99069, color: " #cac285" },
+				{ label: "Ukrajina",  y: 99069, color: " #a58fa9" },
 				{ label: "Slovensko", y: 66107, color: "#e25858" },
 				{ label: "Vietnam", y: 55677, color: "#87c288"  },
 				{ label: "Rusko",  y: 24207, color: "#248c66"  },
 				{ label: "Polsko",  y: 11418, color: "#a98cde"  },
 				{ label: "Bulharsko",  y: 7615, color: "#6497cf"  },
 				{ label: "Rumunsko",  y: 7186  },
-				{ label: "Mongolsko",  y: 6353  },
+				{ label: "Mongolsko",  y: 6353, color: " #cac285"   },
 				{ label: "Ostatni",  y: 72363, color: "#eb9694" }
 			]
 		}
@@ -164,14 +170,14 @@
             indexLabel: "{label} {y}",
             startAngle:  -90,
 			dataPoints: [
-				{ label: "Ukrajina",  y: 93545, color: " #cac285"  },
+				{ label: "Ukrajina",  y: 93545, color: " #a58fa9"  },
 				{ label: "Slovensko", y: 62344, color: "#e25858"  },
 				{ label: "Vietnam", y: 55105, color: "#87c288"  },
 				{ label: "Rusko",  y: 23783, color: "#248c66"  },
 				{ label: "Polsko",  y: 11285, color: "#a98cde"  },
 				{ label: "Bulharsko",  y: 7192, color: "#6497cf"  },
 				{ label: "Rumunsko",  y: 6335  },
-				{ label: "Mongolsko",  y: 5894  },
+				{ label: "Mongolsko",  y: 5894, color: " #cac285"  },
 				{ label: "Ostatni",  y: 68671, color: "#eb9694"  }
 			]
 		}
@@ -192,14 +198,14 @@
             indexLabel: "{label} {y}",
             startAngle:  -90,
 			dataPoints: [
-				{ label: "Ukrajina",  y: 90776, color: " #cac285"  },
+				{ label: "Ukrajina",  y: 90776, color: " #a58fa9"  },
 				{ label: "Slovensko", y: 58843, color: "#e25858"  },
 				{ label: "Vietnam", y: 54390, color: "#87c288"  },
 				{ label: "Rusko",  y: 23376, color: "#248c66"  },
 				{ label: "Polsko",  y: 11129, color: "#a98cde"  },
 				{ label: "Bulharsko",  y: 6687, color: "#6497cf"  },
 				{ label: "Rumunsko",  y: 5545  },
-				{ label: "Mongolsko",  y: 5603  },
+				{ label: "Mongolsko",  y: 5603, color: " #cac285"   },
 				{ label: "Ostatni",  y: 65543, color: "#eb9694"  }
 			]
 		}
