--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         margin-top: 2%;
         color:white;
         font-family: myFontBold;
-        text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+        /* text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000; */
     }
 
     @font-face {
