--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     </div>
     <div id="Board">
         <div class="text">
+            <img src="flags.jpg" id="FlagPic" alt="flag česka a EU">
             <dfn title="Změna místa pobytu směrem na území jiného než domovského státu"><u>Imigrace</u></dfn> z rozvojových zemí představuje přirozený krok lidí hledajících lepší životní podmínky a nové příležitosti. 
             Česká republika se v tomto ohledu vyniká, nabízí pohodlné podmínky pro přesídlení ze zemí bývalého Sovětského svazu, Vietnamu, Slovenska a dalších.
             Například podobnost českého jazyka s ruštinou usnadňuje adaptaci pro mluvčí ruštiny. 
             Kromě toho je proces přesunu do České republiky méně byrokratický ve srovnání s okolními zeměmi, což jej činí atraktivnějším a dostupnějším.
         </div>
-        <div class="graph" id="chartContainer1"></div>
+        <div class="graph" id="chartContainer1"alt="Graf, kde Ukrajina,Slovensko,Vietnam, Rusko,Polsko, Bulharsko, Rumunsko a Mongolsko jsou největší časti"></div>
         <div class="text">
             Vyhody stěhování do ČR:
             <ul>
@@ -41,13 +42,13 @@
                 </li>
             </ul>
         </div>
-        <div class="graph" id="chartContainer2"></div>
+        <div class="graph" id="chartContainer2" alt="Graf, kde Ukrajina,Slovensko,Vietnam, Rusko,Polsko, Bulharsko, Rumunsko a Mongolsko jsou největší časti"></div>
         <div class="text">
             Jak můžeme pozorovat, v roce 2022 bylo nejvíce imigrantů z Ukrajiny, jako v jiných letech,
              ale v tento rok  byl jejich počet obzvlášť velký. To je způsobeno tím, že tam začala válka 24. února 2022,
               a tak v Evropě přibylo mnoho uprchlíků z Ukrajiny. A samozřejmě, Slováci tradičně vedou mezi imigranty a v roce 2022 jsou na druhém místě.
         </div>
-        <div class="graph" id="chartContainer3"></div>
+        <div class="graph" id="chartContainer3"alt="Graf, kde Ukrajina,Slovensko,Vietnam, Rusko,Polsko, Bulharsko, Rumunsko a Mongolsko jsou největší časti"></div>
         <div class="graph" id="chartContainer4"></div>
         <div class="text">
             Zdroj informaci: <a href="https://www.mvcr.cz/clanek/cizinci-s-povolenym-pobytem.aspx">MINISTERSTVO VNITRA ČESKĚ REPUBLIKY</a>
@@ -58,10 +59,20 @@
         <img src="capy.png" id="CapyPic">
         <p id="CapyText">Scroll up!</p>
     </div>
+    <div id="Copyright">
+        Made by: 
+    </div>
 </body>
 </html>
 
 <style>
+    #FlagPic{
+        width:18em;
+        float:right;
+        margin: 0.8em 0em 0em 1em;
+        border:2px solid #5a4d6d;
+        border-radius:15px;
+    }
     #CapyText{
         position:absolute;
         bottom:0;
@@ -91,28 +102,13 @@
         text-justify: inter-word;
         margin:1em;
     }
-    #chartContainer{
-        width: 100%; 
-        height: 300px;
-        margin-top: 5%;
-        transition: 1s;
-    }
     .graph{
         height:30em;
         margin-top: 5%;
-        min-width:fit-content;
     }
-    .graphPic{
-        width: 100%;
-        height: 100%;
-    }
-
     body{
         margin: 0;
         background: rgb(90 77 109);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
     }
     #Board{
         background-color: #f0e4e4;
@@ -127,12 +123,10 @@
     }
     #HeaderText{
         font-size: 35px;
-        font-weight: bold;
         text-align: center;
         margin-top: 2%;
         color:white;
         font-family: myFontBold;
-        /* text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000; */
     }
 
     @font-face {
@@ -151,10 +145,7 @@
 </style>
 <script>
     function ReturnToTop(){
-        window.scrollTo({
-        top: 0,
-        behavior: 'smooth'
-    });
+        window.scrollTo({top: 0,behavior: 'smooth'});
     }
     window.onload = function () {
 	var chart1 = new CanvasJS.Chart("chartContainer1", {
