Added final text

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         <div class="graph" id="chartContainer3"alt="Graf, kde Ukrajina,Slovensko,Vietnam, Rusko,Polsko, Bulharsko, Rumunsko a Mongolsko jsou největší časti"></div>
         <div class="graph" id="chartContainer4"></div>
         <div class="text">
+            Na konci shrneme všechny výsledky a sledujeme celkový trend emigrace od roku 2013 do roku 2023.
+            K 27. březnu 2021 činila populace České republiky 10 524 167 obyvatel.
+            Podle údajů statistického úřadu činil počet cizinců 1,2 milionu lidí. 
+            To znamená, že 10 % obyvatel České republiky jsou cizinci. 
+            Emigranti jsou nedílnou součástí ekonomiky a jejího rozvoje,
+            a proto je velmi důležité zohledňovat všechny jejich trendy, důvody emigrace a způsoby, 
+            jakými se emigranti adaptují v zemi.
+            <br><br>
             Zdroj informaci: <a href="https://www.mvcr.cz/clanek/cizinci-s-povolenym-pobytem.aspx">MINISTERSTVO VNITRA ČESKĚ REPUBLIKY</a>
         </div>
 
