--- a/index.html
+++ b/index.html
@@ -68,12 +68,21 @@
         <p id="CapyText">Scroll up!</p>
     </div>
     <div id="Copyright">
-        Made by: 
+        Made by: Kirill Borodinskiy, Zinaida Esir, Roman Frolov
     </div>
 </body>
 </html>
 
 <style>
+    #Copyright{
+        text-align: left;
+        font-family: myFont;
+        font-size: 15px;
+        color:white;
+        text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+        margin-bottom:1em;
+        margin-left:1em;
+    }
     #FlagPic{
         width:18em;
         float:right;
